ecommerce/templates/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: 961544628649.dkr.ecr.ap-south-1.amazonaws.com/auth-service:v1
          ports:
            - containerPort: 3000
