ecommerce/templates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 961544628649.dkr.ecr.ap-south-1.amazonaws.com/frontend:v1
          ports:
            - containerPort: 80
