ecommerce/templates/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  type: ClusterIP
  selector:
    app: cart-service
  ports:
    - port: 3002
      targetPort: 3002
